2005-09-20 Kimmo
 PATCH: [ 1295568 ] Manual: New Open-dialog screenshot
  Manual/screenshots: OpenDlg1.gif

2005-09-19 Kimmo
 PATCH: [ 1294595 ] Manual: Update options
  Manual: Configuration.xml

2005-09-18 Kimmo
 PATCH: [ 1294162 ] Manual: First update to file compare
  Manual: Compare_filex.xml
  Manual/Screenshots: filecomp1.gif filecomp_context1.gif filecomp_statusbar1.gif
   linediff.gif
  Manual/Screenshots new files: File_headerbar1.gif Merge_menu.gif
  Manual/Screenshots deleted files File_headerbar1.jpg Merge_menu.jpg

2005-09-17 Kimmo
 PATCH: [ 1293296 ] Manual: Updates for folder compare
  Manual: Compare_dirs.xml
  Manual/Screenshots: dircomp1.gif Dircomp_status1.gif Dircomp_status2.gif

2005-09-16 Kimmo
 PATCH: [ 1292327 ] Manual: introduction updates
  Manual: Introduction.xml
 PATCH: [ 1292336 ] Manual: update installation doc
  Manual: Install.xml

2005-09-15 Kimmo
 PATCH: [ 1286016 ] Shortcut keys for bookmarks
  Submitted by Sigvald Refsum
  Manual: Shortcut_keys.xml

2005-09-07 Kimmo
 Bump revision number to 1.1.4
  Manual: WinMerge_help.xml

2005-09-05 Kimmo
 PATCH: [ 1281561 ] Manual: Whats new in 2.4
  Manual: Whatsnew_2_1.xml

2005-09-05 Kimmo
 Previous change history is in file readme.txt
 (I made a mistake -- forgot to create this file until 2005-09-16)